[package]
name = "iroh-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iroh-gateway"
path = "src/main.rs"

[dependencies]
# n0-snafu 0.2.2 requires ^0.7.0 but color-backtrace 0.7.3 removed
# `is_dependency_code` which n0-snafu uses. This constraint intersects with
# n0-snafu's ^0.7.0 to force 0.7.2. Remove once n0-snafu publishes a fix.
color-backtrace = ">=0.7.0, <0.7.3"
askama = "0.15.1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
http-body-util = "0.1.3"
hyper = "1"
iroh = { version = "0.95", default-features = false }
iroh-base = "0.95"
iroh-metrics = "0.38"
iroh-proxy-utils = { git = "https://github.com/n0-computer/iroh-proxy-utils", rev = "38ef14f7bc215348d47987563bb1b5198cc91f40" }
iroh-relay = "0.95"
n0-error = { version = "0.1", features = ["anyhow"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
sentry = { version = "0.42.0", features = ["tracing"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
debug = "line-tables-only"
