[package]
name = "iroh-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iroh-gateway"
path = "src/main.rs"

[dependencies]
# n0-snafu 0.2.2 requires ^0.7.0 but color-backtrace 0.7.3 removed
# `is_dependency_code` which n0-snafu uses. This constraint intersects with
# n0-snafu's ^0.7.0 to force 0.7.2. Remove once n0-snafu publishes a fix.
color-backtrace = ">=0.7.0, <0.7.3"
askama = "0.15.1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
http-body-util = "0.1.3"
hyper = "1"
iroh = { version = "1.0", default-features = false }
iroh-base = "1.0"
iroh-metrics = "1.0"
iroh-proxy-utils = "0.3"
iroh-relay = "1.0"
iroh-services = "1.0"
n0-error = { version = "1.0", features = ["anyhow"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
debug = "line-tables-only"
